# online-judger

./: .gitignore  Base.h  C1LinesWordsIgnoreCase.c  C2LinesWordsCase.c  CMakeLists.txt  JudgeAPI.cpp  JudgeAPI.h  JudgeBackend.cpp  JudgeBackend.h  Parsers.h  ProcessIO.cpp  ProcessIO.h  SubmissionWatcher.cpp  SubmissionWatcher.h  judge.c  oj_core.cpp  parsers.cpp
.github/workflows/: clang-format.yml  release.yml  windows_rel.yml
